syntax = "proto3";

option go_package = "go.ligato.io/vpp-agent/v3/plugins/kvscheduler/internal/test/model";

package model;

message ArrayValue {
    repeated string items = 1;
    string item_suffix = 2;
}

message StringValue {
    string value = 1;
}
